--- a/index.html
+++ b/index.html
@@ -24,31 +24,39 @@
 
 
     <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand ml-5" href="#">CV Pablo German Dominguez</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse w-100 justify-content-end " id="navbarNav">
+                <ul class="navbar-nav mr-5 ">
+                    <li class="nav-item active">
+                        <a class="nav-link mr-2" href="#">About<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link mr-2" href="#">Skills</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link mr-2" href="#">Portfolio</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link mr-2" href="#">Experience</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link mr-2" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
         <div class="card bg-dark text-white">
-            <img src="https://images.pexels.com/photos/270348/pexels-photo-270348.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="card-img w-75" alt="Imagen">
-            <div class="card-img-overlay">
-                <nav class="navbar navbar-expand-lg navbar-light">
-                    <a class="navbar-brand" href="#">Navbar</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse"
-                        data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                            <a class="nav-item nav-link" href="#">Features</a>
-                            <a class="nav-item nav-link" href="#">Pricing</a>
-                            <a class="nav-item nav-link disabled" href="#" tabindex="-1"
-                                aria-disabled="true">Disabled</a>
-                        </div>
-                    </div>
-                </nav>
-
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
-                <p class="card-text">Last updated 3 mins ago</p>
+            <img src="https://images.pexels.com/photos/1187974/pexels-photo-1187974.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                class="card-img" height="500px" alt="Imagen">
+            <div class="card-img-overlay text-center">
+                <img src="img/Perfil.jpg" alt="foto" class="rounded-circle mt-5" height="150px" width="150px">
+                <h2 class="card-title mt-5">Pablo German Dominguez</h2>
+                <p class="card-text">Developer WEB</p>
             </div>
         </div>
     </header>
