basicinformation no responsive

--- a/index.html
+++ b/index.html
@@ -61,6 +61,44 @@
         </div>
     </header>
 
+    <section class="container mt-5 mb-5">
+        <div class="card ">
+            <div class="d-flex">
+                <div class="card-body w-50">
+                    <h3 class="card-title">About</h3>
+                    <p class="card-text mt-5">Some quick example text to build on the card Lorem, ipsum dolor sit amet
+                        consectetur adipisicing elit. Beatae nihil.</p>
+                    <p class=" mt-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet libero facere voluptatum adipisci
+                        et soluta optio odit id consectetur quia?</p>
+                </div>
+                <div class="card-body w-50">
+                    <h3 class="card-title">Basic Information</h3>
+                    <div class="d-flex mt-3">
+                        <h6>AGE:</h6>
+                        <p class="ml-5">20</p>
+                    </div>
+                    <div class="d-flex mt-3">
+                        <h6>E-MAIL:</h6>
+                        <p class="ml-5">dominguezpg.99@gmail.com</p>
+                    </div>
+                    <div class="d-flex mt-3">
+                        <h6>PHONE:</h6>
+                        <p class="ml-5">3816252237</p>
+                    </div>
+                    <div class="d-flex mt-3">
+                        <h6>ADRESS:</h6>
+                        <p class="ml-5">Tucuman, Agentina</p>
+                    </div>
+                    <div class="d-flex mt-3">
+                        <h6>LANGUEGE:</h6>
+                        <p class="ml-5">English, Portugues, Italiano</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
 
 
 </body>
