--- a/index.html
+++ b/index.html
@@ -25,29 +25,31 @@
 
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand ml-5" href="#">CV Pablo German Dominguez</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse w-100 justify-content-end " id="navbarNav">
-                <ul class="navbar-nav mr-5 ">
-                    <li class="nav-item active">
-                        <a class="nav-link mr-2" href="#">About<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link mr-2" href="#">Skills</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link mr-2" href="#">Portfolio</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link mr-2" href="#">Experience</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link mr-2" href="#">Contact</a>
-                    </li>
-                </ul>
+            <div class="container">
+                <a class="navbar-brand" href="#">CV Pablo German Dominguez</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse w-100 justify-content-end " id="navbarNav">
+                    <ul class="navbar-nav mr-5 ">
+                        <li class="nav-item active">
+                            <a class="nav-link mr-2" href="#">About</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link mr-2" href="#">Skills</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link mr-2" href="#">Portfolio</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link mr-2" href="#">Experience</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link mr-2" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
         <div class="card bg-dark text-white">
@@ -62,37 +64,25 @@
     </header>
 
     <section class="container mt-5 mb-5">
-        <div class="card ">
-            <div class="d-flex">
-                <div class="card-body w-50">
+        <div class="row">
+            <div class="col-sm-12 col-md-6">
+                <div class="">
                     <h3 class="card-title">About</h3>
-                    <p class="card-text mt-5">Some quick example text to build on the card Lorem, ipsum dolor sit amet
+                    <p class="card-text">Some quick example text to build on the card Lorem, ipsum dolor sit amet
                         consectetur adipisicing elit. Beatae nihil.</p>
-                    <p class=" mt-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet libero facere voluptatum adipisci
+                    <p class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet libero facere voluptatum
+                        adipisci
                         et soluta optio odit id consectetur quia?</p>
                 </div>
-                <div class="card-body w-50">
+            </div>
+            <div class="col-sm-12 col-md-6">
+                <div class="">
                     <h3 class="card-title">Basic Information</h3>
-                    <div class="d-flex mt-3">
-                        <h6>AGE:</h6>
-                        <p class="ml-5">20</p>
-                    </div>
-                    <div class="d-flex mt-3">
-                        <h6>E-MAIL:</h6>
-                        <p class="ml-5">dominguezpg.99@gmail.com</p>
-                    </div>
-                    <div class="d-flex mt-3">
-                        <h6>PHONE:</h6>
-                        <p class="ml-5">3816252237</p>
-                    </div>
-                    <div class="d-flex mt-3">
-                        <h6>ADRESS:</h6>
-                        <p class="ml-5">Tucuman, Agentina</p>
-                    </div>
-                    <div class="d-flex mt-3">
-                        <h6>LANGUEGE:</h6>
-                        <p class="ml-5">English, Portugues, Italiano</p>
-                    </div>
+                    <p><strong>AGE:</strong> 20</p>
+                    <p><strong>E-MAIL:</strong>dominguezpg.99@gmail.com></p>
+                    <p><strong>PHONE:</strong>3816252237</p>
+                    <p><strong>ADRESS:</strong>Tucuman, Agentina</p>
+                    <p><strong>LANGUEGE:</strong>English, Portugues, Italiano</p>
                 </div>
             </div>
         </div>
