--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
 
     </section>
-    <section >
+    <section class="my-5" >
         <h4 class="text-center">Professional Skills</h4>
         <div class="container">
             <div class="row">
@@ -98,29 +98,29 @@
                         <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"
                             aria-valuemin="0" aria-valuemax="100">25%</div>
                     </div>
-                    <p class="mt-2">HTML</p>
+                    <p class="mt-2">JAVASCRIPT</p>
                     <div class="progress mt-2">
                         <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"
                             aria-valuemin="0" aria-valuemax="100">25%</div>
                     </div>
-                    <p class="mt-2">HTML</p>
+                    <p class="mt-2">BOOTSTRAP</p>
                     <div class="progress mt-2">
                         <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"
                             aria-valuemin="0" aria-valuemax="100">25%</div>
                     </div>
                 </div>
                 <div class=" col-sm-12 col-lg-6">
-                    <p class="mt-2">HTML</p>
+                    <p class="mt-2">CSS</p>
                     <div class="progress mt-2">
                         <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"
                             aria-valuemin="0" aria-valuemax="100">25%</div>
                     </div>
-                    <p class="mt-2">HTML</p>
+                    <p class="mt-2">SASS</p>
                     <div class="progress mt-2">
                         <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"
                             aria-valuemin="0" aria-valuemax="100">25%</div>
                     </div>
-                    <p class="mt-2">HTML</p>
+                    <p class="mt-2">PHOTOSHOP</p>
                     <div class="progress mt-2">
                         <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"
                             aria-valuemin="0" aria-valuemax="100">25%</div>
