--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
 
     </section>
-    <section class="my-5" >
+    <section class="my-5">
         <h4 class="text-center">Professional Skills</h4>
         <div class="container">
             <div class="row">
@@ -125,6 +125,29 @@
                         <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"
                             aria-valuemin="0" aria-valuemax="100">25%</div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="text-center my-5">
+        <h4>Portfolio</h4>
+        <div class="container my-5">
+            <div class="row">
+                <div class="col-sm-12 col-lg-6">
+                    <img src="https://images.pexels.com/photos/34140/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                        alt="imagen" class="my-4" width="500px" height="300px">
+                </div>
+                <div class="col-sm-12 col-lg-6">
+                    <img src="https://images.pexels.com/photos/266176/pexels-photo-266176.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                        alt="imagen" class="my-4" width="500px" height="300px">
+                </div>
+                <div class="col-sm-12 col-lg-6">
+                    <img src="https://images.pexels.com/photos/109371/pexels-photo-109371.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                        alt="imagen" class="my-4" width="500px" height="300px">
+                </div>
+                <div class="col-sm-12 col-lg-6">
+                    <img src="https://images.pexels.com/photos/230544/pexels-photo-230544.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                        alt="imagen" class="my-4" width="500px" height="300px">
                 </div>
             </div>
         </div>
