--- a/index.html
+++ b/index.html
@@ -187,6 +187,44 @@
             </div>
         </div>
     </section>
+    <section class="container my-5">
+        <h2 class="text-center mb-3">Education</h2>
+        <div class="card mb-3">
+            <div class="row no-gutters">
+                <div class="col-md-3 bg-dark text-white text-center">
+                    <p class="mt-5">2006 - 2012</p>
+                    <h4>Inst. Ntra. Sra de Montserrat</h4>
+                </div>
+                <div class="col-md-9">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card mb-3">
+            <div class="row no-gutters">
+                <div class="col-md-3 bg-dark text-white text-center">
+                    <p class="mt-5">2006 - 2012</p>
+                    <h4>Inst. Ntra. Sra de Montserrat</h4>
+                </div>
+                <div class="col-md-9">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
 
 
 </body>
