--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Document</title>
 </head>
 
@@ -226,7 +228,15 @@
 
     </section>
 
-
+    <footer class="bg-primary">
+        <div class="container text-center my-5">
+            <a class="mx-4" href=""><i class="fa fa-linkedin fa-3x text-dark" aria-hidden="true"></i></a>
+            <a class="mx-4" href=""><i class="fa fa-github fa-3x text-dark" aria-hidden="true"></i></a>
+        </div>
+        <div class="title text-center mt-5">
+            <h2 class="mb-4">Pablo German Dominguez</h2>
+        </div>
+    </footer>
 </body>
 
 </html>
