--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </section>
     <section class="text-center my-5">
         <h4>Portfolio</h4>
-        <div class="container my-5">
+        <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-lg-6">
                     <img src="https://images.pexels.com/photos/34140/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500"
@@ -229,12 +229,12 @@
     </section>
 
     <footer class="bg-primary">
-        <div class="container text-center my-5">
-            <a class="mx-4" href=""><i class="fa fa-linkedin fa-3x text-dark" aria-hidden="true"></i></a>
-            <a class="mx-4" href=""><i class="fa fa-github fa-3x text-dark" aria-hidden="true"></i></a>
+        <div class="container text-center mb-5">
+            <a class="mx-4 my-2" href=""><i class="fa fa-linkedin fa-3x text-dark" aria-hidden="true"></i></a>
+            <a class="mx-4 my-2" href=""><i class="fa fa-github fa-3x text-dark" aria-hidden="true"></i></a>
         </div>
         <div class="title text-center mt-5">
-            <h2 class="mb-4">Pablo German Dominguez</h2>
+            <span class="mb-4"><strong>PABLO GERMAN DOMINGUEZ</strong> </span>
         </div>
     </footer>
 </body>
